--- a/webui/package.json
+++ b/webui/package.json
@@ -17,10 +17,12 @@
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-player": "^2.6.2",
+    "react-redux": "^7.2.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
